--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
-YOUTUBE_API_KEY = ""
+YOUTUBE_API_KEY = "AIzaSyDFxz3RyaiRgIBtNbbK0t50JQbLjrnjL08"
+GEMINI_API_KEY = "AIzaSyB1bVWElwIqPtAx4eYSsAP35VepX5BqrgQ"
